# chatterbox-ng

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-publish.yaml  release-on-tag-push.yml
src/chatterbox_ng/models/t3/: llama_configs.py  t3.py
src/chatterbox_ng/models/t3/inference/: t3_hf_backend.py
